# neuro.cpp

./: CMakeList.txt  CMakeLists.txt  combinedataset.py  datasetprep.py  finetune.py  main.cpp  modelfile  secondary dataset.py  signals.cpp  signals.h
.VSCodeCounter/2024-09-13_11-05-19/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-09-20_13-35-50/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
input/: stt.cpp  stt.h  whisper_recognize.py
output/: tts.cpp  tts.h  vtubeStudio.h
process/: inference.py  llm.cpp  llm.h
